--- a/WebSpr/Web.config
+++ b/WebSpr/Web.config
@@ -10,10 +10,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=sql;initial catalog=BEFLsprAuth;Integrated security=SSPI" />
-    <add name="DbContextBEFL" providerName="System.Data.SqlClient" connectionString="Data Source=sql;initial catalog=BEFLspr;Integrated security=SSPI" />
-    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=sql.befl.ru;initial catalog=BEFLsprAuth;User id=beflspr;Password=qQ1234567890" />
-    <add name="DbContextBEFL" providerName="System.Data.SqlClient" connectionString="Data Source=sql.befl.ru;initial catalog=BEFLspr;User id=beflspr;Password=qQ1234567890" />-->
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=sql;initial catalog=BEFLsprAuth;Integrated security=SSPI" />
+    <add name="DbContextBEFL" providerName="System.Data.SqlClient" connectionString="Data Source=sql;initial catalog=BEFLspr;Integrated security=SSPI" />-->
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=sql.befl.ru;initial catalog=BEFLsprAuth;User id=beflspr;Password=qQ1234567890" />
+    <add name="DbContextBEFL" providerName="System.Data.SqlClient" connectionString="Data Source=sql.befl.ru;initial catalog=BEFLspr;User id=beflspr;Password=qQ1234567890" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -42,7 +42,14 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
-    
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -51,12 +58,12 @@
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
