--- a/WebSpr/packages.config
+++ b/WebSpr/packages.config
@@ -19,13 +19,19 @@
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc.ru" version="4.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc.ru" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor.ru" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.0.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.Client.ru" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.Core.ru" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages.Data.ru" version="2.0.20710.0" targetFramework="net40" />
